# tiger-webhook

./: .env.example  .env.test  .gitignore  DEPLOYMENT_UBUNTU.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LOGGING_IMPLEMENTATION_SUMMARY.md  MIGRATION_SUMMARY.md  Makefile  PROJECT_SUMMARY.md  README.md  check_contract_info.py  debug_deribit_api.py  demo_position_polling.py  demo_spread_threshold.py  deploy.sh  docker-compose.yml  example_option_chain_analysis.py  nginx.conf  pyproject.toml  requirements.txt  start_server.py  test_deribit_api_direct.py  test_deribit_order.py  test_enhanced_polling_manager.py  test_logging_milliseconds.py  test_position_adjustment_fix.py  test_position_polling_config.py  test_real_trading_simple.py  test_socks5_proxy.py  test_spread_threshold_config.py  test_text_logging.py  test_tiger_integration.py  test_webhook_edit_delete.py  重构.md
config/: apikeys.example.yml
docs/: API.md  CONFIGURATION.md  DEPLOYMENT.md  LOGGING.md  POLLING_MANAGER_GAP_ANALYSIS.md  POSITION_POLLING_INTERVAL_MINUTES.md  US_SYMBOLS_CACHE.md  业务差异记录.md
docs/技术需求文档/: 1_渐进限价策略技术需求.md  2_持仓调整逻辑技术需求.md  3_智能订单定价技术需求.md  4_价差计算引擎技术需求.md  5_高级订单管理技术需求.md  6_手动轮询端点技术需求.md  7_增强Delta跟踪技术需求.md
examples/: check_tiger_markets.py  direct_tiger_api.py  get_option_symbols.py  test_tiger_options_page.py  tiger_hk_options_guide.py  tiger_troubleshoot.py  use_tiger_client.py
public/: README.md  account-detail.html  delta-manager.html  index.html  logs.html  tiger-options.html
public/static/css/: account-detail.css  dashboard.css  tiger-options.css
public/static/js/: dashboard.js  tiger-options.js
public/tiger_static/css/: logs.css  tiger-options.css
public/tiger_static/js/: account-detail.js  logs.js  tiger-options.js
src/: __init__.py  app.py  main.py
src/api/: __init__.py  config.py  deribit_private.py
src/config/: config_loader.py
src/database/: delta_manager.py  types.py
src/deribit_webhook/: __init__.py  app.py  main.py
src/deribit_webhook/api/: __init__.py  (+2 more)
src/middleware/: __init__.py  account_validation.py  error_handler.py  security.py
src/models/: __init__.py  auth_types.py  trading_types.py
src/routes/: auth.py  delta.py  health.py  logs.py  positions.py  trading.py  webhook.py  wechat.py
src/services/: __init__.py  auth_service.py  authentication_errors.py  background_tasks.py  deribit_client.py  mock_deribit_client.py  option_service.py  option_trading_service.py  polling_manager.py  position_adjustment.py  progressive_limit_strategy.py  wechat_notification.py
src/utils/: logging_config.py  price_utils.py  response_utils.py
tests/: conftest.py
tests/integration/: test_api_endpoints.py
tests/unit/: test_config.py  test_option_calculator.py  test_polling_manager_orders.py  test_trading.py
tools/: only_select_delta.py  send_webhook_test.py
(+46 files in other folders)
